--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -5,13 +5,9 @@ import { Steps } from 'nextra/components'
 
 # Python for Excel
 
-<a href="https://appsource.microsoft.com/en-us/product/office/WA200007447?tab=Overview">
-    <img className="mt-2 w-40" src="/images/MS_AppSource.png" />
-</a>
-
 ## Overview
 
-Create an Excel [LAMBDA function](https://support.microsoft.com/en-us/office/lambda-function-bd212d27-1cd1-4321-a34a-ccbf254b8b67) from a Python function in two easy steps as follows:
+Install the [add-in](https://appsource.microsoft.com/en-us/product/office/WA200007447?tab=Overview), then create an Excel [LAMBDA function](https://support.microsoft.com/en-us/office/lambda-function-bd212d27-1cd1-4321-a34a-ccbf254b8b67) from a Python function in two easy steps as follows:
  
 <Steps>
 ### Write a Python function
@@ -208,7 +204,7 @@ As mentioned above in the [Type Conversion](#type-conversion) section, Excel arr
 
 ## BOARDFLARE.RUNPY
 
-`BOARDFLARE.RUNPY` is a legacy function that can still be used, but is not recommended for most use-cases.  The code editor and automatically generated LAMBDA functions are the preferred way to work with Python code in Excel.
+`BOARDFLARE.RUNPY` is a legacy function that can still be used, but for most scenarios the code editor and automatically generated LAMBDA functions are the preferred way to work with Python code in Excel.
 
 `RUNPY` takes a Python code string and a repeating positional argument `arg1, arg2, ...` (similar to Python *args) and returns the result.  The syntax is as follows:
 
