add banner with link to slideshow

--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -2,8 +2,14 @@
 title: Python for Excel
 ---
 import { Steps } from 'nextra/components'
+import { Callout } from 'nextra/components'
 
 # Python for Excel
+
+<Callout type="info" emoji="🆕">
+  v1.1.0 brings completely new automated creation of Excel LAMBDA functions from Python code.
+  See the [slideshow](https://whistlernetworks.sharepoint.com/:p:/s/Boardflare/EavKXzTcSmJArk1FadRoH40BaFTd1xrff2cw3bGSRs3AFg?rtime=Mhp28Ns33Ug) for a quick overview and read the new documentation below.  Experimental.🧪
+</Callout>
 
 ## Overview
 
@@ -269,7 +275,7 @@ See this [brief video](https://youtu.be/ngxM7VRkkgk) and [example workbook](http
 ## Changelog
 
 <details>
-  <summary>1.1.0 - 2025-01-17</summary>
+  <summary>1.1.0 - 2025-01-18</summary>
   - Added `Code Editor` to create LAMBDA functions automatically from Python code.
   - Ability to import multiple functions from a Jupyter notebook.
   - DataFrame type conversion only occurs if code contains a pandas import.
