migrate links to demo workbooks

--- a/pages/apps/excel/hugging-face.mdx
+++ b/pages/apps/excel/hugging-face.mdx
@@ -41,7 +41,7 @@ These functions are intended to be consumed in a named Excel [LAMBDA function](h
 
 ## Demo
 
-Download a copy of the [demo workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EZqMLW_bjpFKudG65wSJzt0B5Ft_DI2AfjZdOFwT0JMwFg?e=dNPbsT) to see the functions in action.  You'll need to put your hf_token on the ReadMe sheet to use the serverless API inference.
+Download a copy of the [demo workbook](https://boardflare.sharepoint.com/:x:/g/ETNW-_ZJZc9Oi7EyN4OvoK8BVRBKVsXpWPDLR2haa0Tq7g?e=zjac9w) to see the functions in action.  You'll need to put your hf_token on the ReadMe sheet to use the serverless API inference.
 
 ## Functions
 
