--- a/pages/apps/excel/localgpt.mdx
+++ b/pages/apps/excel/localgpt.mdx
@@ -59,7 +59,7 @@ This app provides only one general function `GPT`, as follows:
 
 ## Examples
 
-See the following [workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/Ec6Mpv0DuKBDjRbg4lAMTT8BkV6JSzL2vuBBFUvXhhYTQg?e=dgfGrm).
+See the following [workbook](https://boardflare.sharepoint.com/:x:/g/ETBqtoZRxsJIsY7p78DUCQYBqbimUDMOr_tjQXL89swccw?e=760eye).
 
 Typically you will want a prompt that concatenates an instruction with a cell value, such as the following:
 
