--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -66,7 +66,7 @@ Some key features of the add-in are as follows:
 
 ### Editor Tab
 
-See the [slideshow](https://whistlernetworks.sharepoint.com/:p:/s/Boardflare/EavKXzTcSmJArk1FadRoH40BaFTd1xrff2cw3bGSRs3AFg?rtime=Mhp28Ns33Ug) for a quick overview and read the new documentation below.
+See the [slideshow](https://boardflare.sharepoint.com/:p:/g/EQnCIws7lt1Glc8EqDnJZfYBPSdE-UfHtOntEzpuO4O80A?e=WAmO7L) for a quick overview and read the new documentation below.
 
 The add-in `Editor` tab contains a code editor ([Monaco](https://github.com/microsoft/monaco-editor), same as VS Code) that allows you to write Python code with syntax highlighting.  When you save your code a LAMBDA function is created from your Python code.  You can also run [test cases](#test-cases) to verify your function.  If you drag the task pane open for more room, you will have the following view:
 
@@ -237,7 +237,7 @@ add(arg1, arg2)  # This value of this expression will be returned.
 ```
 The arguments and return values undergo the [type conversion](#type-conversion) noted earlier, with a key difference that array arguments are converted to pandas DataFrames first.
 
-See this [brief video](https://youtu.be/ngxM7VRkkgk) and [example workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EZ3eKR1wcltImmG2OA4sX-kB8RSA2cvJFM-hPoQGGdwMmA?e=m0eFdd) for more examples.
+See this [brief video](https://youtu.be/ngxM7VRkkgk) and [example workbook](https://boardflare.sharepoint.com/:x:/g/ESGeGi-O5EpGumN9Acdc1NUBDDTq1o0BOchwxW9m3kh_1w?e=czam03) for more examples.
 
 ## FAQ
 
