--- a/pages/blog/2024/azure-sentiment-analysis.mdx
+++ b/pages/blog/2024/azure-sentiment-analysis.mdx
@@ -127,11 +127,9 @@ To run this function from Excel we need to use the `BOARDFLARE.RUNPY` function w
 ```
 The documentation for the `azure_sentiment` function is available [here](/functions/text/sentiment-analysis/azure_sentiment).
 
-The workbook which implements this is available here: [Azure Sentiment Analysis in Excel](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EfVwGShk-o5Bq3j47GYdc6oBIZfk0lTXNHvDbQCjqVD9FA?e=lOceuX) which also has a link to the source code.
-
 ## Results
 
-As shown in the workbook, running the table of reviews eariler through the Azure Sentiment Analysis generates the following high-level sentiment analysis results:
+As shown in the workbook, running the table of reviews earlier through the Azure Sentiment Analysis generates the following high-level sentiment analysis results:
 
 | Sentence | Aspect | Opinion |
 |:---|:---|:---|
@@ -156,7 +154,7 @@ As shown in the workbook, running the table of reviews eariler through the Azure
 | Superb entrees but slow kitchen and rude host | kitchen | slow |
 | Superb entrees but slow kitchen and rude host | host | rude |
 
-Most of the columns in the output were omitted for brevity, you can see everything in the example [workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EfVwGShk-o5Bq3j47GYdc6oBIZfk0lTXNHvDbQCjqVD9FA?e=lOceuX).
+Most of the columns in the output were omitted for brevity.
 
 ## Conclusion
 
