--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -6,10 +6,6 @@ import { Callout } from 'nextra/components'
 
 # Python for Excel
 
-<Callout type="info" emoji="🆕">
-  Create Excel custom LAMBDA functions from a Python function.
-</Callout>
-
 ## Overview
 
 Install the [add-in](https://go.microsoft.com/fwlink/?linkid=2261819&templateid=WA200007447&templatetitle=Python%20for%20Excel), then create an Excel [LAMBDA function](https://support.microsoft.com/en-us/office/lambda-function-bd212d27-1cd1-4321-a34a-ccbf254b8b67) from a Python function in two easy steps as follows:
@@ -276,6 +272,16 @@ See this [brief video](https://youtu.be/ngxM7VRkkgk) and [example workbook](http
 </details>
 
 ## Changelog
+
+<details>
+  <summary>1.2.1 - 2025-02-23</summary>
+- AI prompts that are not suitable for a function display an error message instead of garbage code.
+- Added tooltip to login to let users know purpose of login is for OneDrive access.
+- AI prompts that are not suitable for a function display an error message instead of garbage code.
+- Improved logging to better isolate name manager errors some users are experiencing.
+- Clicking AI button in Editor now displays prompt used to create function, if any, instead of confirmation dialog.
+- Prompts now saved to settings.
+</details>
 
 <details>
   <summary>1.2.0 - 2025-02-16</summary>
